--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,14 @@ body {
   font-family: "Rubik";
 }
 
+a,
+a:hover,
+a:focus,
+a:active {
+  text-decoration: none;
+  color: inherit;
+}
+
 .container {
   padding: 40px;
   margin: 0 auto;
@@ -15,7 +23,7 @@ body {
 
 .card {
   background-color: rgb(195, 211, 199);
-  padding: 40px;
+  padding: 15px;
   list-style: none;
   text-align: center;
   border: inset 4px;
@@ -42,23 +50,36 @@ body {
 
 .card-title {
   text-transform: uppercase;
-  font-size: 32px;
+  font-size: 20px;
   font-weight: normal;
   /* margin-bottom: 0; */
 }
 
 .card-subtitle {
   font-weight: lighter;
-  font-size: 20px;
+  font-size: 15px;
   color: #666;
 }
 
 .card-image {
-  height: 180px;
+  height: 150px;
+}
+
+.card button {
+  margin-top: 15px;
+}
+
+.card button {
+  cursor: pointer;
+}
+
+.favorite-true {
+  color: white;
+  background-color: green;
 }
 
 .container {
-  height: 900px;
+  height: 750px;
   background-color: rgb(247, 252, 188);
 }
 
@@ -70,4 +91,5 @@ body {
   overflow-y: scroll;
   height: 95%;
   border: solid 2px black;
+  background-color: rgb(41, 173, 255);
 }
