--- a/css/header.css
+++ b/css/header.css
@@ -51,5 +51,6 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 20px;
+  font-size: 25px;
+  font-weight: bold;
 }
