--- a/css/header.css
+++ b/css/header.css
@@ -11,7 +11,6 @@ header {
 .header__logo-div {
   width: 350px;
   height: 40px;
-  background-color: rgb(197, 183, 209);
   padding-left: 40px;
   display: flex;
   align-items: center;
@@ -20,6 +19,7 @@ header {
 .header__logo-div h1 {
   font-size: 40px;
   font-family: "Rubik Mono One";
+  color: orangered;
 }
 
 .header__logo-div:hover {
@@ -47,10 +47,12 @@ header {
 .header__favorites-div p {
   width: 200px;
   height: 50px;
-  background-color: aquamarine;
+  background-color: green;
+  color: white;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 25px;
   font-weight: bold;
+  border: inset 2px;
 }
